@@ -77,9 +77,10 @@ class PaeseServiceTest {
     @Test
     void getAllPaesi_ShouldReturnPaesiList() {
         List<Paese> paesi = Arrays.asList(
-                new Paese("1", "Italy", null, null, null, "link1", null),
-                new Paese("2", "France", null, null, null, "link2", null)
+                new Paese("1", "IT", "Italy", List.of(), List.of(), List.of(), "link1", List.of()),
+                new Paese("2", "FR", "France", List.of(), List.of(), List.of(), "link2", List.of())
         );
+
 
         when(repository.findAll()).thenReturn(paesi);
 
@@ -111,7 +112,7 @@ class PaeseServiceTest {
     @Test
     void getPaeseById_ShouldReturnPaese() {
         String id = "1";
-        Paese paese = new Paese(id, "Italy", null, null, null, "link1", null);
+        Paese paese = new Paese(id, "IT", "Italy", List.of(), List.of(), List.of(), "link1", List.of());
 
         when(repository.findById(id)).thenReturn(Optional.of(paese));
 
@@ -154,7 +155,7 @@ class PaeseServiceTest {
      */
     @Test
     void createPaese_ShouldSaveAndReturnPaese() {
-        Paese paese = new Paese("1", "Italy", null, null, null, "link1", null);
+        Paese paese = new Paese("1", "IT", "Italy", List.of(), List.of(), List.of(), "link1", List.of());
 
         when(repository.save(paese)).thenReturn(paese);
 
@@ -180,7 +181,7 @@ class PaeseServiceTest {
 
     @Test
     void createPaese_ShouldThrowExceptionForDuplicatePaese() {
-        Paese paese = new Paese("1", "Italy", null, null, null, "link1", null);
+        Paese paese =new Paese("1", "IT", "Italy", List.of(), List.of(), List.of(), "link1", List.of());
 
         when(repository.existsById(paese.getIdPaese())).thenReturn(true);
 
@@ -196,8 +197,8 @@ class PaeseServiceTest {
     @Test
     void updatePaese_ShouldReturnUpdatedPaese() {
         String id = "1";
-        Paese existingPaese = new Paese(id, "Italy", null, null, null, "link1", null);
-        Paese updatedPaese = new Paese(id, "Updated Italy", null, null, null, "updatedLink", null);
+        Paese existingPaese = new Paese("1", "IT", "Italy", List.of(), List.of(), List.of(), "link1", List.of());
+        Paese updatedPaese = new Paese("1", "IT", "Updated Italy", List.of(), List.of(), List.of(), " updated.link1.com", List.of());
 
         when(repository.findById(id)).thenReturn(Optional.of(existingPaese));
         when(repository.save(any(Paese.class))).thenReturn(updatedPaese);
@@ -227,7 +228,7 @@ class PaeseServiceTest {
     @Test
     void updatePaese_ShouldReturnEmptyForNonExistentPaese() {
         String id = "1";
-        Paese updatedPaese = new Paese(id, "Updated Italy", null, null, null, "updatedLink", null);
+        Paese updatedPaese = new Paese("1", "IT", "Updated Italy", List.of(), List.of(), List.of(), "updatedlink1.com", List.of());
 
         when(repository.findById(id)).thenReturn(Optional.empty());
 
@@ -243,7 +244,7 @@ class PaeseServiceTest {
     @Test
     void updatePaese_ShouldThrowExceptionForInvalidId() {
         String id = null;
-        Paese updatedPaese = new Paese("1", "Updated Italy", null, null, null, "updatedLink", null);
+        Paese updatedPaese = new Paese("1", "IT", "Updated Italy", List.of(), List.of(), List.of(), "link1.update", List.of());
 
         System.out.println("Testing updatePaese with invalid ID...");
         Exception exception = assertThrows(IllegalArgumentException.class, () -> service.updatePaese(id, updatedPaese));
@@ -280,50 +281,6 @@ class PaeseServiceTest {
         verify(repository, never()).existsById(anyString());
         verify(repository, never()).deleteById(anyString());
     }
-    /**
-     * Test per findPaesiByForum.
-     */
-    @Test
-    void findPaesiByForum_ShouldReturnPaesiList() {
-        String idForum = "forum1";
-        List<Paese> paesi = Arrays.asList(
-                new Paese("1", "Italy", Collections.singletonList(idForum), null, null, "link1", null),
-                new Paese("2", "France", Collections.singletonList(idForum), null, null, "link2", null)
-        );
-
-        when(repository.findAll()).thenReturn(paesi);
-
-        System.out.println("Testing findPaesiByForum with valid forum ID and associated countries...");
-        List<Paese> result = service.findPaesiByForum(idForum);
-
-        System.out.println("Result: " + result);
-        assertEquals(2, result.size());
-        verify(repository, times(1)).findAll();
-    }
-
-    @Test
-    void findPaesiByForum_ShouldReturnEmptyList() {
-        String idForum = "forum1";
-        when(repository.findAll()).thenReturn(Collections.emptyList());
-
-        System.out.println("Testing findPaesiByForum with valid forum ID but no associated countries...");
-        List<Paese> result = service.findPaesiByForum(idForum);
-
-        System.out.println("Result: " + result);
-        assertTrue(result.isEmpty());
-        verify(repository, times(1)).findAll();
-    }
-
-    @Test
-    void findPaesiByForum_ShouldThrowExceptionForInvalidId() {
-        String idForum = null;
-
-        System.out.println("Testing findPaesiByForum with invalid forum ID...");
-        Exception exception = assertThrows(IllegalArgumentException.class, () -> service.findPaesiByForum(idForum));
-
-        System.out.println("Exception: " + exception.getMessage());
-        verify(repository, never()).findAll();
-    }
 
     /**
      * Test per findPaesiByCampagna.
@@ -345,10 +302,12 @@ class PaeseServiceTest {
         campagna.setStato("attiva");
         campagna.setImmagine("https://example.com/forest-campaign.jpg");
         campagna.setPaese("Italy");
+
         List<Paese> paesi = Arrays.asList(
-                new Paese("1", "Italy", null, Collections.singletonList(campagna), null, "link1", null),
-                new Paese("2", "France", null, Collections.singletonList(campagna), null, "link2", null)
+                new Paese("1", "IT", "Italy", List.of(), Collections.singletonList(campagna), List.of(), "link1", List.of()),
+                new Paese("2", "FR", "France", List.of(), Collections.singletonList(campagna), List.of(), "link2", List.of())
         );
+
 
         when(repository.findAll()).thenReturn(paesi);
 
@@ -393,8 +352,8 @@ class PaeseServiceTest {
         Benchmark benchmark = new Benchmark(idBenchmark, "Economico", "Alta", "Valutazione economica globale");
 
         List<Paese> paesi = Arrays.asList(
-                new Paese("1", "Italy", null, null, Collections.singletonList(benchmark), "link1", null),
-                new Paese("2", "France", null, null, Collections.singletonList(benchmark), "link2", null)
+                new Paese("1", "IT", "Italy", List.of(), List.of(),Collections.singletonList(benchmark), "link1", List.of()),
+                new Paese("2", "FR", "France", List.of(), List.of(), Collections.singletonList(benchmark), "link2", List.of())
         );
 
         when(repository.findAll()).thenReturn(paesi);
